objects/Amazon_S3__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AWS_Region__c</fullName>
        <label>AWS Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_key__c</fullName>
        <label>Access key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lamda_Funcion_URL__c</fullName>
        <label>Lamda Funcion URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_Bucket_Name_1__c</fullName>
        <label>S3 Bucket Name 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_Bucket_Name_2__c</fullName>
        <label>S3 Bucket Name 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_access_key__c</fullName>
        <label>Secret access key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Amazon S3</label>
</CustomObject>